# pyripherals

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  new-peripheral-request.md
.github/workflows/: python-app.yml
docs/: rtd_setup.py
docs/source/: conf.py  core.rst  endpoint_definitions_guide.rst  example.rst  index.rst  installation.rst  new_peripheral_guide.rst  peripherals.rst  register_index_guide.rst  tests.rst  utils.rst
examples/: ep_defines_example.v  ep_defines_sheet_example.xlsx  ep_defines_sheet_template.xlsx  impedance_analyzer.py
paper/: paper.bib  paper.md
python/: Registers.xlsx
python/src/interfaces/peripherals/: TMF8801.py
python/src/pyripherals/: __init__.py  core.py  utils.py
python/src/pyripherals/peripherals/: AD5453.py  AD7961.py  ADCDATA.py  ADS8686.py  DAC101C081.py  DAC53401.py  DAC80508.py  DDR3.py  I2CController.py  SPIController.py  SPIFifoDriven.py  TCA9555.py  TMF8801.py  UID_24AA025UID.py
python/tests/integration_tests/: calc_impedance_test.py
python/tests/unit_tests/: endpoint_test.py  fpga_test.py  i2c_test.py  register_test.py  utils_test.py
