[metadata]
name = pyripherals
version = 0.0.1
author = Abe Stroschein
author_email = ajstros@duck.com
description = Python solution for communicating with peripheral ICs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ajstros/pyripherals
project_urls =
    Bug Tracker = https://github.com/Ajstros/pyripherals/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = python/src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python/src
